2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added application/x-bzip2 mimetype (blame
	Sourceforge) (Closes: #117087), removed guitar as a possible handler,
	it's dead

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: added blend and BLEND as possible suffixes for
	Blender files (Closes: #118024)

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: Fix Real and Blender mime-types to go through
	check-mime.pl

2003-07-15  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-vfs.keys.in: use gpdf if available.

2003-07-12  Joël Brich <joel.brich@laposte.net>

	* configure.in: Added "eo" to ALL_LINGUAS.

2003-07-09  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: .mp3 files are now audio/mpeg

2003-07-02  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.mime: only .ram files are playlists, not the others,
	added rv as a possible extension of Real Media stuff, removed
	http:// as a possible magic for Real Networks file, too many
	false positives

2003-06-20  Anders Carlsson  <andersca@codefactory.se>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime:
	Add support for Blender files
	
2003-06-17  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: cleanup
	* check-mime.pl: don't warn on now expected startup_notify entry
	* gnome-vfs.keys.in: added MagicPoint presentations
	* gnome-vfs.mime: added as well

2003-06-11  Alexander Larsson  <alexl@redhat.com>

	* gnome-vfs.keys.in:
	Add EOG collection to short list

	* gnome-vfs.mime:
	Add .lo to object file extensions

2003-06-11  Jon Svendsen  <jon-sven@frisurf.no>

	* gnome-vfs.applications: Add startup_notify=true for applications
	with stable releases supporting freedesktop.org startup notification

2003-06-05  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* configure.in: Added "is" into ALL_LINGUAS

2003-06-03  Seth Nickell  <snickell@stanford.edu>
